Fix focus on Safari

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -577,6 +577,7 @@ a.product__text {
   border: none;
   background: transparent;
   color: currentColor;
+  padding: 0;
 }
 
 .product__media-toggle::after {
@@ -598,7 +599,18 @@ a.product__text {
   box-shadow: none;
 }
 
+.product__media-toggle.focused {
+  outline: 0;
+  box-shadow: none;
+}
+
 .product__media-toggle:focus-visible:after {
+  outline: 0.2rem solid rgba(var(--color-foreground),.5);
+  outline-offset: 0.3rem;
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0.5rem 0.4rem rgba(var(--color-foreground),.3);
+}
+
+.product__media-toggle.focused::after {
   outline: 0.2rem solid rgba(var(--color-foreground),.5);
   outline-offset: 0.3rem;
   box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),0 0 0.5rem 0.4rem rgba(var(--color-foreground),.3);
